--- a/task_definition.yml
+++ b/task_definition.yml
@@ -9,54 +9,59 @@ tasks:
     testedFunctionName: maximum
     userInputFilename: liczby.txt
     userOutputFilename: wyniki.txt
+    checkerFilename: null
     checkTypes:
-      FAST:
+      EXAMPLE:
         inputFilesDirectory: tests/task_1/fast/in
         outputFilesDirectory: tests/task_1/fast/out
-      FULL:
+      OFFICIAL:
         inputFilesDirectory: tests/task_1/full/in
         outputFilesDirectory: tests/task_1/full/out
   task_2:
     testedFunctionName: minimum
     userInputFilename: liczby.txt
     userOutputFilename: wyniki.txt
+    checkerFilename: null
     checkTypes:
-      FAST:
+      EXAMPLE:
         inputFilesDirectory: tests/task_2/fast/in
         outputFilesDirectory: tests/task_2/fast/out
-      FULL:
+      OFFICIAL:
         inputFilesDirectory: tests/task_2/full/in
         outputFilesDirectory: tests/task_2/full/out
   task_3:
     testedFunctionName: sum_elements
     userInputFilename: liczby.txt
     userOutputFilename: wyniki.txt
+    checkerFilename: null
     checkTypes:
-      FAST:
+      EXAMPLE:
         inputFilesDirectory: tests/task_3/fast/in
         outputFilesDirectory: tests/task_3/fast/out
-      FULL:
+      OFFICIAL:
         inputFilesDirectory: tests/task_3/full/in
         outputFilesDirectory: tests/task_3/full/out
   task_4:
     testedFunctionName: average
     userInputFilename: liczby.txt
     userOutputFilename: wyniki.txt
+    checkerFilename: null
     checkTypes:
-      FAST:
+      EXAMPLE:
         inputFilesDirectory: tests/task_4/fast/in
         outputFilesDirectory: tests/task_4/fast/out
-      FULL:
+      OFFICIAL:
         inputFilesDirectory: tests/task_4/full/in
         outputFilesDirectory: tests/task_4/full/out
   task_5:
     testedFunctionName: median
     userInputFilename: liczby.txt
     userOutputFilename: wyniki.txt
+    checkerFilename: null
     checkTypes:
-      FAST:
+      EXAMPLE:
         inputFilesDirectory: tests/task_5/fast/in
         outputFilesDirectory: tests/task_5/fast/out
-      FULL:
+      OFFICIAL:
         inputFilesDirectory: tests/task_5/full/in
         outputFilesDirectory: tests/task_5/full/out
